# WProtect

./: .ycm_extra_conf.py  CMakeLists.txt  CMakeLists.txt.user.40cf51d  CMakeLists.txt.user.95f007e  README  README.md  WProtectConfig.h.in  emacs_project.el  wprotect_config.lua
inc/: #tree.hpp#  Analysis.h  CodeInfoStruct.h  DataOperation.cpp  DataOperation.h  ELFStruct.h  MyString.cpp  MyString.h  PEStruct.h  WPStruct.h  cscope.out  datatype.h  logfunctions.h
sdk/: WProtectSDK.e  WProtectSDK.e.txt  WProtectSDK.h
sdk/E Sample/: Demo.e
sdk/MSVC Sample/: ConsoleApplication1.sln
src/: CMakeLists.txt  Frontends.7z  build_address.hpp  main.cpp  main.cpp.bak  vm_protect.h
src/AsmJit/: AsmJit.h  AsmJitEnlarge.c  AsmJitEnlarge.h  Assembl.cpp  Assembl.h  AssemblerX86X64.h  Build.h  CMakeLists (复件).txt  CMakeLists.txt  Config.h  OperandX86X64.cpp  OperandX86X64.h  ReadMe.txt  Util.h  opcode_table.c  opcode_table.h
src/CryptoPP/: CMakeLists.txt
src/CryptoPP/Crypto++ 5.6.1 API Reference/: 3way_8cpp_source.html  3way_8h.html  3way_8h_source.html  adler32_8cpp_source.html  adler32_8h_source.html  aes_8h_source.html  algebra_8cpp_source.html  algebra_8h_source.html  algparam_8cpp_source.html  algparam_8h_source.html  annotated.html  arc4_8cpp_source.html  arc4_8h_source.html  argnames_8h_source.html  asn_8cpp_source.html  asn_8h_source.html  authenc_8cpp_source.html  authenc_8h_source.html  base32_8cpp_source.html  base32_8h_source.html  base64_8cpp_source.html  base64_8h_source.html  basecode_8cpp_source.html  basecode_8h_source.html  bench2_8cpp_source.html  bench_8cpp_source.html  bench_8h_source.html  bfinit_8cpp_source.html  blowfish_8cpp_source.html  blowfish_8h.html  blowfish_8h_source.html  blumshub_8cpp_source.html  blumshub_8h_source.html  camellia_8cpp_source.html  camellia_8h.html  camellia_8h_source.html  cast_8cpp_source.html  cast_8h.html  cast_8h_source.html  casts_8cpp_source.html  (+1774 more)
src/Disasm/: CMakeLists.txt  asmserv.cpp  assembl.cpp  disasm.cpp  disasm.h
src/Disasm/include/: bfd.h
src/Frontends/: CMakeLists.txt  WProtectDialog.ui  WProtectGui.cc  WProtectGui.h  main.cc  ui_dialog.h  untitled.ui
src/Frontends/b2/: CMakeLists.txt  WProtect.ui
src/Frontends/未命名文件夹/: .mainwindow.cpp.swo  .mainwindow.cpp.swp  .mainwindow.h.swp  CMakeLists.txt  Frontends.pro  Frontends.pro.user.4b3124f.2.7pre1  main.cpp  mainwindow.cpp  mainwindow.ui
src/Libudis86/: CMakeLists.txt  itab.c  types.h  udis86.h
src/Lua/: CMakeLists.txt
src/WProtect/: CMakeLists.txt
src/WProtect/Analysis/: AdvancedAnalysis.cpp  AdvancedAnalysis.hpp  Analysis.cpp  Analysis.hpp  CMakeLists.txt  X86CodeGenerate.cpp  X86CodeGenerate.hpp  思路
src/WProtect/Analysis (复件)/: #AdvancedAnalysis.hpp#  Analysis.cpp  Analysis.hpp  CMakeLists.txt
src/WProtect/DataStruct/: AddrTable.cpp  AddrTable.h  CMakeLists.txt  CodeList.cpp  CodeList.h
src/WProtect/ELF/: CMakeLists.txt  ELFFile.cpp  ELFFile.h  elf.h  elffile (复件).cpp  elffile (复件).hpp
src/WProtect/PE/: CMakeLists.txt  PEExport.cpp  PEExport.h  PEFile.cpp  PEFile.h  PEImport.cpp  PEImport.h  PEReloc (复件).cpp  PEReloc.cpp  PEReloc.h  PESection.cpp  PESection.h
src/WProtect/Protect/: CMakeLists.txt
src/WProtect/Protect/Algorithms/: AddressTable (复件).hpp  AddressTable.hpp  CMakeLists.txt  algorithms  algorithms.h  random.cpp  random.h  random.hpp  upset.hpp
src/WProtect/Protect/Algorithms/未命名文件夹/: AInterface.cpp  AInterface.hpp
src/WProtect/Protect/EquivalentReplacement/: .LuaEquivalentReplacement.cpp.swp  .LuaEquivalentReplacement.h.swp  CMakeLists.txt  CodeAddressTable.hpp  EquivalentReplacement.cpp  EquivalentReplacement.hpp  LuaEquivalentReplacement.cpp  LuaEquivalentReplacement.cpp.b  LuaEquivalentReplacement.h  LuaEquivalentReplacement.h.b  SingleOutOfOrder.cpp  wprotect_config.lua
src/WProtect/Protect/EquivalentReplacement/baak/: EquivalentReplacement.cpp  EquivalentReplacement.hpp
src/WProtect/Protect/EquivalentReplacement/bak/: CodeLibrary_flymake.h  EquivalenReplacement.cpp  EquivalenReplacement.hpp  EquivalentInstruct.cpp  EquivalentInstruct.h  SingleOutOfOrder.h
src/WProtect/Protect/OutOfOrder/: #OutOfOrder.cpp#  CMakeLists.txt  OutOfOrder.cpp  OutOfOrder.hpp
src/WProtect/Protect/OutOfOrder/bak/: OutOfOrder.cpp  OutOfOrder.h  OutOfOrder.hpp
src/WProtect/Protect/VirtualMachine/: #PCode.hpp#  .directory  BuildVM.cpp  BuildVM.hpp  BuildVMByteCode (另一个复件).cpp  BuildVMByteCode (复件).cpp  BuildVMByteCode.cpp  BuildVMByteCode.hpp  BuildVMCode.cpp  BuildVMCode.hpp  CMakeLists.txt  CombosVMCode.cpp  CombosVMCode.hpp  OutDetailedInformation.cpp  OutDetailedInformation.hpp  PCode.cpp  PCode.hpp  SeniorVMHandle.cpp  SeniorVMHandle.hpp  VMAddressTable.hpp  VMCodeBuffer (复件).hpp  VMCodeBuffer.hpp  VMHandle.cpp  VMHandle.h  VOperand.hpp  VirtualMachine.cpp  VirtualMachine.h  VmRelocation.hpp
src/WProtect/Protect/VirtualMachine/bak/: BuildVM.hpp  CMakeLists.txt  PCode.cpp  PCode.hpp  SeniorVMHandle.cpp  SeniorVMHandle.hpp  VMHandle.cpp  VMHandle.h  VirtualMachine.cpp  VirtualMachine.h  VirtualMachineManage.cpp  VirtualMachineManage.hpp
src/WProtect/Protect/VirtualMachine/新建文件夹/: PCode.cpp  PCode.hpp  SeniorVMHandle.cpp  VMHandle.cpp  VMHandle.h  VirtualMachine.cpp
src/WProtect/Protect/VirtualMachine/新建文件夹 1/: VMAddressTable.cpp  VMAddressTable.hpp
src/WProtect/Protect/VirtualMachine/未命名文件夹 2/: #BuildVMCode.cpp#  #SeniorVMHandle.cpp#  #VMHandle.cpp#  #VirtualMachine.cpp#  VirtualMachine.cpp.bak
src/WProtect/Protect/VirtualMachine/高级虚拟机句柄/: SeniorVMHandle.cpp  SeniorVMHandle.hpp  SeniorVMHandle.hpp.bak
src/Yasm/: CMakeLists.txt  ConfigureChecks.cmake  config.h.cmake
src/Yasm/frontends/tasm/: CMakeLists.txt  tasm.c
src/Yasm/frontends/vsyasm/: CMakeLists.txt
src/Yasm/frontends/yasm/: CMakeLists.txt  yasm.c
src/Yasm/libyasm/: CMakeLists.txt  module.c
src/Yasm/modules/: CMakeLists.txt
test/Algorithms/: #CMakeLists.txt#  AlgorithmsLibrary.cpp  AlgorithmsLibrary.h  AlgorithmsTest.cpp  CMakeLists.txt
test/app/: helloWProtect  helloWProtect.asm  helloWProtect.c
test/insn/: WProtectSDK.inc  add_test.asm  call_test.asm  (+15 more)
(+5 files in other folders)
