cmake_minimum_required(VERSION 2.8.3)

If(BUILD_HOST STREQUAL "x86_32")
    Set (${CMAKE_SYSTEM_PROCESSOR} i386)
    Message("Host X86_32")
    #include(/usr/lib32/cmake/Qt5Widgets/Qt5WidgetsConfig.cmake)
    #include(/usr/lib32/cmake/Qt5Gui/Qt5GuiConfig.cmake) 
    #set(CMAKE_SYSTEM_LIBRARY_PATH /lib32 /usr/lib32 /usr/local/lib32)
    #set(FIND_LIBRARY_USE_LIB64_PATHS OFF)
    #set(CMAKE_IGNORE_PATH /lib /usr/lib /usr/local/lib)
endif()

project(testproject)
# Find includes in corresponding build directories
set(CMAKE_INCLUDE_CURRENT_DIR ON)


Set(Qt5Core_DIR "/usr/lib32/cmake/Qt5Core")
Set(Qt5Gui_DIR "/usr/lib32/cmake/Qt5Gui")
Set(Qt5Widgets_DIR "/usr/lib32/cmake/Qt5Widgets")
link_directories("/usr/lib32/qt/plugins/")
link_directories("/usr/lib32/qt/plugins/imageformats") 
link_directories("/usr/lib32/qt/plugins/platforminputcontexts")
link_directories("/usr/lib32/qt/plugins/platformthemes")
link_directories("/usr/lib32/") 
#
find_package(Qt5Widgets PATHS "/usr/lib32/cmake")
if (Qt5Widgets_FOUND)
    include_directories(${Qt5Widgets_INCLUDE_DIRS})
    add_definitions(${Qt5Widgets_DEFINITIONS})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
    Message("Modules Paths : ${Qt5Widgets_DIR}")
    message("Qt Include : ${Qt5Widgets_INCLUDE_DIRS}")
    message("Qt Libraries :  ${Qt5Widgets_LIBRARIES}")
    Message("CMake Cur: ${CMAKE_CURRENT_LIST_DIR}")
  Message("${Qt5${_module_dep}_DIR}")
endif()
find_package(Qt5Core PATHS "/usr/lib32/cmake") 
 if (Qt5Core_FOUND)

 endif()
qt5_wrap_ui(UI_FILES WProtectDialog.ui)
set(MOC_SRCS)
qt5_wrap_cpp(MOC_SRCS WProtectGui.h)
add_executable(WProtectGui main.cc WProtectGui.cc ${MOC_SRCS}  ${UI_FILES})
#set_target_properties(WProtectGui PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
#qt5_use_modules(WProtectGui Widgets)

target_link_libraries(WProtectGui Qt5::Widgets Qt5::Core ${LIBS})
